@@ -18,6 +18,7 @@ Application Changes:
 Data Changes:
 - Fixed missing multiplier for Haunted lifestyle quality.
 - Fixed missing availability for the BMW Luxus.
+- Muscle Augmentation and Muscle Toner now just disable Celerity instead of being forbidden from being bought if the character has Celerity. Fixes #4621.
 
 Changed/New Strings:
 - String_GameplayOption
